# mx-bls-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: main.yml
benches/: bls381_benches.rs  multi_verify_benches.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_publickey_serialization.rs  fuzz_secretkey_serialization.rs  fuzz_signature_serialization.rs
src/: bls_api.rs  constants.rs  error.rs  g1.rs  g2.rs  gt.rs  init.rs  lib.rs  secret_key.rs
tests/: aggregate.txt  fast_aggregate_verify.txt  sign.txt  test.rs
