[package]
name = "mx-bls-rs"
version = "0.0.1"
authors = ["MultiversX <contact@multiversx.com>"]
# license = "????"
readme = "README.md"
repository = "https://github.com/multiversx/mx-bls-rs"
homepage = "https://multiversx.com/"
documentation = "https://docs.multiversx.com/"
description = "BLS signature library for MultiversX"
keywords = ["multiversx", "BLS", "blockchain"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
criterion = "0.7.0"
hex = "0.4.0"

[[bench]]
name = "bls381_benches"
harness = false

[[bench]]
name = "multi_verify_benches"
harness = false
