[package]
name = "multiversx-bls"
version = "0.2.0"
edition = "2021"

authors = ["MultiversX <contact@multiversx.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/multiversx/mx-bls-rs"
homepage = "https://multiversx.com/"
documentation = "https://docs.multiversx.com/"
description = "BLS signature library for MultiversX"
keywords = ["multiversx", "BLS", "blockchain"]
categories = ["cryptography"]

[lib]
path = "src/lib.rs"

[dependencies]
criterion = "0.7.0"
hex = "0.4.0"

[[bench]]
name = "bls381_benches"
harness = false

[[bench]]
name = "multi_verify_benches"
harness = false
